:rocket: Greeting draft

--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,9 @@
         border-collapse: collapse;
         border-spacing: 0;
       }
+      html {
+        background-color: #051940;
+      }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
