--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Catawba Cultural Center website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <meta name="description" content="__META_DESCRIPTION__" />
+    <meta name="og:title" content="__META_OG_TITLE__" />
+    <meta name="og:description" content="__META_OG_DESCRIPTION__" />
+    <meta name="og:image" content="__META_OG_IMAGE__" />
     <style>
       /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
