--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <meta name="og:title" content="__META_OG_TITLE__" />
     <meta name="og:description" content="__META_OG_DESCRIPTION__" />
     <meta name="og:image" content="__META_OG_IMAGE__" />
+    <meta name="twitter:card" content="summary_large_image" />
     <style>
       /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
