--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="description" content="__META_DESCRIPTION__" />
-    <meta name="og:title" content="__META_OG_TITLE__" />
-    <meta name="og:description" content="__META_OG_DESCRIPTION__" />
-    <meta name="og:image" content="__META_OG_IMAGE__" />
+    <meta name="og:title" content="__META_TITLE__" />
+    <meta name="og:description" content="__META_DESCRIPTION__" />
+    <meta name="og:image" content="__META_IMAGE__" />
     <meta name="twitter:card" content="summary_large_image" />
+
     <style>
       /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -165,7 +166,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Catawba Cultural Center</title>
+    <title>__META_TITLE__</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
